--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,24 @@
 {
-	"name": "WFM Pinger",
-	"author": {
-		"name": "Eric Dahl",
-		"email": "edahl@groupon.com",
-		"url": ""
-	},
-	"defaultLocale": "en",
-	"private": true,
-	"location": [
-		"ticket_sidebar",
-		"new_ticket_sidebar"
-	],
-	"version": "1.0.4",
-	"frameworkVersion": "1.0",
-	"noTemplate": true
+  "name": "WFM Pinger",
+  "author": {
+    "name": "Eric Dahl",
+    "email": "edahl@groupon.com",
+    "url": ""
+  },
+  "defaultLocale": "en",
+  "private": true,
+  "location": [
+    "ticket_sidebar",
+    "new_ticket_sidebar"
+  ],
+  "version": "1.0.5",
+  "frameworkVersion": "1.0",
+  "noTemplate": true,
+  "parameters": [
+    {
+      "name": "wfm_server",
+      "type": "text",
+      "required": true
+    }
+  ]
 }
