--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,22 @@
 {
-  "name": "WFM Pinger",
-  "author": {
-    "name": "Eric Dahl",
-    "email": "edahl@groupon.com",
-    "url": ""
-  },
-  "defaultLocale": "en",
-  "private": true,
-  "location": [
-    "ticket_sidebar",
-    "new_ticket_sidebar"
-  ],
-  "version": "1.1.1",
-  "frameworkVersion": "1.0",
-  "noTemplate": true,
-  "parameters": [
-    {
-      "name": "wfm_server",
-      "type": "text",
-      "required": true
-    }
-  ]
+	"name": "WFM Pinger",
+	"author": {
+		"name": "Eric Dahl",
+		"email": "edahl@groupon.com",
+		"url": ""
+	},
+	"defaultLocale": "en",
+	"private": true,
+	"location": [
+		"ticket_sidebar",
+		"new_ticket_sidebar"
+	],
+	"version": "1.1.1",
+	"frameworkVersion": "1.0",
+	"noTemplate": true,
+	"parameters": [{
+		"name": "wfm_server",
+		"type": "text",
+		"required": true
+	}]
 }
